--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=file_management
+DB_TEST_DATABASE=file_management_test
 DB_USERNAME=root
 DB_PASSWORD=
 
